deploy/deploy-mux-api/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mux-api-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mux-api
  template:
    metadata:
      labels:
        app: mux-api
    spec:
      containers:
        - name: mux-api
          image: gcr.io/hoang-duc-techology/go-mux-restapi:v1.0.1
          imagePullPolicy: "IfNotPresent"
          ports:
            - containerPort: 8080
