deploy/deploy-mux-api/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mux-api-service
spec:
  selector:
    app: mux-api
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
